Moved the results modal to a seperate component and restructred the logic to fit that. Fixed a X instead of 0 when someone crosses a scorerow Fixed that the text "YOUR TURN" warped on smaller devices.

--- a/src/app/components/score-board/score-board.component.css
+++ b/src/app/components/score-board/score-board.component.css
@@ -99,7 +99,7 @@
     width:100%;
 } */
 
-.scoreboard-btn:disabled{
+.scoreboard-btn:disabled {
     opacity:0.5;
 }
 
@@ -107,4 +107,8 @@
     min-width: 4rem;
     width:20%;
     max-width: 100%;
+}
+
+.crossedScore {
+    margin-left: -2px;
 }
